--- a/app/views/courses/3/_list.html.erb
+++ b/app/views/courses/3/_list.html.erb
@@ -1,31 +1,34 @@
-<div class="courseResource related-courses row">
-  <div class="listBar col-sm-2">
-    <div class="col-sm-12">
+<div class="related-courses row">
+  <div class="listBar">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default btn-primary">教学基本条件</a>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">教学条件</a>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">教学视频</a>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">典型案例</a>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">学生作品</a>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-2">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">自助学习资源</a>
     </div>
   </div>
 
   <!-- 教学基本条件 -->
-  <div class="partContent col-sm-10" style="display:block;">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">专业人才培养方案<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">
+          专业人才培养方案
+          <%= image_tag("course_3/down.png") %>
+        </div>
       </div>
       <ul>
         <% 5.times do %>
@@ -104,7 +107,7 @@
     </div>
   </div>
   <!-- 教学条件 -->
-  <div class="partContent col-sm-10">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
@@ -123,7 +126,7 @@
     </div>
   </div>
   <!-- 教学视频 -->
-  <div class="partContent col-sm-10">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
@@ -142,7 +145,7 @@
     </div>
   </div>
   <!-- 典型案例 -->
-  <div class="partContent col-sm-10">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
@@ -161,7 +164,7 @@
     </div>
   </div>
   <!-- 学生作品 -->
-  <div class="partContent col-sm-10">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
@@ -180,11 +183,11 @@
     </div>
   </div>
   <!-- 自助学习资源 -->
-  <div class="partContent col-sm-10">
+  <div class="partContent">
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">自助学习资源<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">自助学习资源<%= image_tag("course_3/down.png")%></div>
       </div>
       <ul>
         <% 5.times do %>
