--- a/app/views/courses/3/_course_policy.html.erb
+++ b/app/views/courses/3/_course_policy.html.erb
@@ -7,6 +7,26 @@
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 我们的特色</p>
     <div class="container-fluid">
+      <div id="myCarousel" class="course3 carousel slide" style="float:right;margin: 10px;">
+         <!-- 轮播（Carousel）指标 -->
+         <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+         </ol>
+         <!-- 轮播（Carousel）项目 -->
+         <div class="carousel-inner">
+            <div class="item active">
+               <%= image_tag("course_3/photo1.jpg") %>
+            </div>
+            <div class="item">
+               <%= image_tag("course_3/photo1.jpg") %>
+            </div>
+            <div class="item">
+               <%= image_tag("course_3/photo1.jpg") %>
+            </div>
+         </div>
+      </div>
       <dd>1．按岗位要求设计学习内容，按实际工作过程设计教学过程，将工作体系与学习体系相对接，在获得知识技能的同时，明确了岗位要求、岗位职责，将岗位要求与职业岗位对接，实现与企业岗位的无缝对接。</dd>
       <dd>2．选用实际委托项目作为教学项目，可激发学生的创作热情，学生作品即产品，极大地鼓舞了学生的学习积极性，并能将知识、技能、态度融为一体，进行职业素养、职业规范的训练。</dd>
       <dd>3．项目、任务引领式教学让每个学生明确了项目的要求、标准，也让学生获得了发展的能力，充分挖掘了学生的潜力，学生在学习过程中逐渐清醒地认识到自身的特长，为其今后选择职业、选择岗位，乃至职业生涯发展提供了基础。</dd>
