--- a/app/views/courses/4/_course_content.html.erb
+++ b/app/views/courses/4/_course_content.html.erb
@@ -32,7 +32,7 @@
 <div class="container-fluid course-content-div" style="display: none;">
 	<div class="row">
       <div class="col-md-12 text-center" style="margin:10px 0">
-          <%= image_tag("course_4/content2.png",width:"875")%>
+          <%= image_tag("course_4/content2.jpg",width:"875")%>
       </div><br>
       <div class="col-md-12 text-center">
           <h3>学习内容和进度安排</h3><br>
