--- a/app/views/courses/4/_main.html.erb
+++ b/app/views/courses/4/_main.html.erb
@@ -9,16 +9,16 @@
       </li>
       <li class="col-sm-12 my-title"><strong>课程设计</strong></li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">新能源汽车结构与维修课程整体设计</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">电动汽车结构与维修（理实一体）课程整体设计</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
       <li class="col-sm-12 my-title"><strong>课程标准</strong></li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《新能源汽车结构与维修》课程标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修（理实一体）》课程标准</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
       <li class="col-sm-12">
-        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《新能源汽车结构与维修》课程实践教学标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修（理实一体）》课程实践教学标准</a>
         <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
       </li>
     </ul> 
