--- a/app/views/courses/3/_course_resource.html.erb
+++ b/app/views/courses/3/_course_resource.html.erb
@@ -25,7 +25,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">专业人才培养方案<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">专业人才培养方案</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -41,7 +41,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">课程标准<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">课程标准</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -57,7 +57,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">电子教材<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">电子教材</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -73,7 +73,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">电子教案<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">电子教案</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -89,7 +89,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">考核标准<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">考核标准</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -108,7 +108,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">教学条件<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">教学条件</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -127,7 +127,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">教学视频<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">教学视频</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -146,7 +146,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">典型案例<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">典型案例</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -165,7 +165,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">学生作品<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">学生作品</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -184,7 +184,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">自助学习资源<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">自助学习资源</div>
       </div>
       <ul>
         <% 5.times do %>
