--- a/app/views/courses/3/_list.html.erb
+++ b/app/views/courses/3/_list.html.erb
@@ -27,7 +27,6 @@
         <div class="titleBlock"></div>
         <div class="titleBar">
           专业人才培养方案
-          <%= image_tag("course_3/down.png") %>
         </div>
       </div>
       <ul>
@@ -44,7 +43,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">课程标准<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">课程标准</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -60,7 +59,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">电子教材<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">电子教材</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -76,7 +75,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">电子教案<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">电子教案</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -92,7 +91,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">考核标准<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">考核标准</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -111,7 +110,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">教学条件<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">教学条件</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -130,7 +129,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">教学视频<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">教学视频</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -149,7 +148,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">典型案例<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">典型案例</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -168,7 +167,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">学生作品<%= image_tag("course_3/down.png") %></div>
+        <div class="titleBar">学生作品</div>
       </div>
       <ul>
         <% 5.times do %>
@@ -187,7 +186,7 @@
     <div class="baseContent col-sm-12">
       <div class="titleContent">
         <div class="titleBlock"></div>
-        <div class="titleBar">自助学习资源<%= image_tag("course_3/down.png")%></div>
+        <div class="titleBar">自助学习资源</div>
       </div>
       <ul>
         <% 5.times do %>
