--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -2,4 +2,9 @@
   <td><%= question.title %></td>
   <td><%= question.correct_option %></td>
   <td><%= question.correct_hint %></td>
+  <td>
+  	<%= link_to admin_course_sub_course_question_path(course_id: params[:course_id], sub_course_id: params[:sub_course_id], id: question.id), method: :delete, data: { confirm: "确定删除吗？" }, class: "btn btn-danger" do %>
+			<span class="glyphicon glyphicon-trash"></span>
+  	<% end %>
+  </td>
 </tr>
