hidden destroy of admin question

--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -18,7 +18,7 @@
 		  <th class="col-sm-2 text-center">题目标题</th>
 			<th class="col-sm-2 text-center">正确选项</th>
       <th class="col-sm-6 text-center">题目分析</th>
-      <th class="col-sm-2 text-center">操作</th>
+<!--       <th class="col-sm-2 text-center">操作</th> -->
 		</tr>
 	</thead>
 	<tbody>
