--- a/app/views/courses/3/_course_resource.html.erb
+++ b/app/views/courses/3/_course_resource.html.erb
@@ -1,7 +1,7 @@
 <div class="courseResource related-courses row">
   <div class="listBar col-sm-2">
     <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default btn-primary">教学基本条件</a>
+      <a href="javascript:void(0)" class="xcBtn btn btn-default btn-primary">教学基本文件</a>
     </div>
     <div class="col-sm-12">
       <a href="javascript:void(0)" class="xcBtn btn btn-default">教学条件</a>
@@ -16,7 +16,7 @@
       <a href="javascript:void(0)" class="xcBtn btn btn-default">学生作品</a>
     </div>
     <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">自助学习资源</a>
+      <a href="javascript:void(0)" class="xcBtn btn btn-default">自主学习资源</a>
     </div>
   </div>
 
