--- a/app/views/courses/3/_teach_content.html.erb
+++ b/app/views/courses/3/_teach_content.html.erb
@@ -7,7 +7,7 @@
       <dd>本课程的教学内容如下:</dd>
       <dd>(1)首饰设计的基本概念，首饰手绘能力培养的重要性，绘画时所需的工具，首  饰手绘技能的基本方法</dd>
       <dd>(2)曲线造型及直线造型的准确性及熟练性。</dd>
-      <dd>(3)首饰的空间立体讲解分析、首饰的结构性分析。/dd>
+      <dd>(3)首饰的空间立体讲解分析、首饰的结构性分析。</dd>
       <dd>(4)金属及宝石的基本属性、首饰配件及各部件的结构绘制。</dd>
       <dd>(5)常见镶嵌方式的讲解、常见首饰配饰的结构性画法。</dd>
       <dd>(6)首饰的三视图绘制方法。</dd>
