change course show

--- a/app/views/admin/sub_courses/index.html.erb
+++ b/app/views/admin/sub_courses/index.html.erb
@@ -32,6 +32,7 @@
 			<th class="text-center">编号</th>
 			<th class="text-center">名称</th>
 			<th class="text-center">分类</th>
+			<th class="text-center">标签</th>
 			<th class="text-center">附件</th>
 			<th class="text-center">测试题目</th>
 			<% if can? :manage, SubCourse %>
