--- a/app/views/admin/sub_courses/_form.html.erb
+++ b/app/views/admin/sub_courses/_form.html.erb
@@ -1,13 +1,22 @@
 <%= form_for([:admin, @course, @sub_course], html: {class: "form-horizontal"}) do |f| %>
-<div class="form-group">
-  <%= label_tag :category, '所属分类', class: 'col-sm-2 control-label' %>
-  <div class="col-sm-8">
-    <% @categories.each do |category| %>
-      <%= f.radio_button :category_id, category.id, required: true %>
-      <%= f.label :category_id, category.name %>
-    <% end %>
+  <div class="form-group">
+    <%= label_tag :category, '所属分类', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-8">
+      <% @categories.each do |category| %>
+        <%= f.radio_button :category_id, category.id, required: true %>
+        <%= f.label :category_id, category.name %>
+      <% end %>
+    </div>
   </div>
-</div>
+  <div class="form-group">
+    <%= label_tag :tag, '课程标签', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-8">
+      <% SubCourse::TAGS.to_a.each do |tag| %>
+        <%= f.radio_button :tag, tag[0], required: true %>
+        <%= f.label :tag, tag[1] %>
+      <% end %>
+    </div>
+  </div>
   <div class="form-group">
     <%= f.label :name, '子课程名称', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
