--- a/app/views/courses/3/_course_resource.html.erb
+++ b/app/views/courses/3/_course_resource.html.erb
@@ -1,201 +1,59 @@
 <div class="courseResource related-courses row">
   <div class="listBar col-sm-2">
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default btn-primary">教学基本文件</a>
-    </div>
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">教学条件</a>
-    </div>
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">教学视频</a>
-    </div>
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">典型案例</a>
-    </div>
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">学生作品</a>
-    </div>
-    <div class="col-sm-12">
-      <a href="javascript:void(0)" class="xcBtn btn btn-default">自主学习资源</a>
-    </div>
+    <% @categories.each do |category| %>
+      <div class="col-sm-12">
+        <a href="javascript:void(0)" class="xcBtn btn btn-default btn-primary"><%= category.name %></a>
+      </div>
+    <% end %>
   </div>
 
   <!-- 教学基本条件 -->
   <div class="partContent col-sm-10" style="display:block;">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">专业人才培养方案</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @zyrc_sub_courses, title: "专业人才培养方案"}%>
     </div>
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">课程标准</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @kcbz_sub_courses, title: "课程标准"}%>
     </div>
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">电子教材</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @dzjc_sub_courses, title: "电子教材"}%>
     </div>
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">电子教案</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @dzja_sub_courses, title: "电子教案"}%>
     </div>
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">考核标准</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @khbz_sub_courses, title: "考核标准"}%>
     </div>
   </div>
+
   <!-- 教学条件 -->
   <div class="partContent col-sm-10">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">教学条件</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @jxtj_sub_courses, title: "教学条件"}%>
     </div>
   </div>
   <!-- 教学视频 -->
   <div class="partContent col-sm-10">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">教学视频</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @jxsp_sub_courses, title: "教学视频"}%>
     </div>
   </div>
   <!-- 典型案例 -->
   <div class="partContent col-sm-10">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">典型案例</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @dxal_sub_courses, title: "典型案例"}%>
     </div>
   </div>
   <!-- 学生作品 -->
   <div class="partContent col-sm-10">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">学生作品</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @xszp_sub_courses, title: "学生作品"}%>
     </div>
   </div>
-  <!-- 自助学习资源 -->
+  <!-- 自主学习资源 -->
   <div class="partContent col-sm-10">
     <div class="baseContent col-sm-12">
-      <div class="titleContent">
-        <div class="titleBlock"></div>
-        <div class="titleBar">自助学习资源</div>
-      </div>
-      <ul>
-        <% 5.times do %>
-          <li>
-            <span class="text-left">首饰三视图和制图</span>
-            <%= link_to "", class: "fright" do %>
-              <%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render partial: "sub_course", locals: {sub_courses: @zzxx_sub_courses, title: "自主学习资源"}%>
     </div>
   </div>
 </div>
