--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -32,7 +32,7 @@
   <!-- 教学条件 -->
   <div class="partContent">
     <div class="baseContent col-sm-12">
-      <%= render partial: "sub_course", locals: {sub_courses: @jxtj_sub_courses, title: "教学条件"}%>
+      <%= render partial: "sub_course", locals: {sub_courses: @jxtj_sub_courses, title: "教学课件"}%>
     </div>
   </div>
   <!-- 教学视频 -->
