add deleted_at fields

--- a/app/views/admin/courses/_course.html.erb
+++ b/app/views/admin/courses/_course.html.erb
@@ -13,6 +13,7 @@
   <td><%= course.college_applied ? "是" : "否" %></td>
   <td><%= course.city_applied ? "是" : "否" %></td>
   <td><%= link_to "子课程", admin_course_sub_courses_path(course)%></td>
+  <td><%= course.deleted? ? raw("<span class='text-danger'>已删除</span>") : ""%></td>
   <% if can? :manage, Course %>
     <td>
       <%#= link_to [:admin, course], class: 'btn btn-xs btn-info', title: '查看' do %>
@@ -21,9 +22,15 @@
       <%= link_to edit_admin_course_path(course), class: 'btn btn-xs btn-default', title: '编辑' do %>
         <span class="glyphicon glyphicon-edit"></span>
       <%end%>
-      <%= link_to admin_course_path(course), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
-        <span class="glyphicon glyphicon-trash"></span>
-      <%end%>
+      <% if course.deleted? %>
+        <%= link_to restore_admin_course_path(course), method: :patch, data: { confirm: '确定要还原吗？' }, class: 'btn btn-xs btn-default' do%>
+          <span class="glyphicon glyphicon-export"></span>
+        <% end %>
+      <% else%>
+        <%= link_to delete_admin_course_path(course), method: :patch, data: { confirm: '确定要删除吗？' }, class: 'btn btn-xs btn-default' do%>
+          <span class="glyphicon glyphicon-trash"></span>
+        <% end %>
+      <% end %>
     </td>
   <% end %>
 </tr>
