--- a/app/views/admin/managers/_manager.html.erb
+++ b/app/views/admin/managers/_manager.html.erb
@@ -2,7 +2,7 @@
   <td><%= manager.number %></td>
   <td><%= manager.name %></td>
   <td><%= manager.email %></td>
-  <td><%= Manager::ListRoles[manager.roles.to_sym] %></td>
+  <td><%= Manager::ListRoles[manager.roles.to_sym] if manager.roles %></td>
   <td>
     <%= link_to [:admin, manager], class: 'btn btn-xs btn-info', title: '查看' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
