--- a/app/views/courses/_sub_course.html.erb
+++ b/app/views/courses/_sub_course.html.erb
@@ -7,16 +7,18 @@
   <div class="titleBar"><%= title %></div>
 </div>
 <ul>
-  <% sub_courses.each do |sub_course|%>
-    <li>
-      <%= link_to show_sub_courses_path(number: sub_course.number, course_number: @course.number) do %>
-        <span class="title"><%= sub_course.name %></span>
-      <%end%>
-      <% if sub_course.attachment.present? %>
-        <%= link_to sub_course.attachment.content.url, class: "fright viewPdf", 'data-toggle': "modal", 'data-target': "#myModal", 'data-name': sub_course.name do %>
-          <span>&nbsp;&nbsp;<%= image_tag "read_icon.png"%>观看</span>
+  <% if sub_courses.present? %>
+    <% sub_courses.each do |sub_course|%>
+      <li>
+        <%= link_to show_sub_courses_path(number: sub_course.number, course_number: @course.number) do %>
+          <span class="title"><%= sub_course.name %></span>
+        <%end%>
+        <% if sub_course.attachment.present? %>
+          <%= link_to sub_course.attachment.content.url, class: "fright viewPdf", 'data-toggle': "modal", 'data-target': "#myModal", 'data-name': sub_course.name do %>
+            <span>&nbsp;&nbsp;<%= image_tag "read_icon.png"%>观看</span>
+          <% end %>
         <% end %>
-      <% end %>
-    </li>
+      </li>
+    <% end %>
   <% end %>
 </ul>
