--- a/app/views/courses/3/_main.html.erb
+++ b/app/views/courses/3/_main.html.erb
@@ -8,7 +8,7 @@
   <a href="javascript:void(0)" class="content public-common-style">教学内容</a>
   <a href="javascript:void(0)" class="resource public-common-style">教学资源</a>
   <a href="javascript:void(0)" class="effect public-common-style">教学效果</a>
-  <a href="javascript:void(0)" class="policy public-common-style">特色与政策</a>
+  <a href="javascript:void(0)" class="self-defined policy public-common-style">特色与政策</a>
 </div>
 <div class="category-list-content">
   <div class="text-content">
