--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,6 +20,7 @@
   <div class="top-content" id="main-video">
 
     <div class="left-content">
+      <div class="top-shadow">说课视频</div>
       <div class="course-image">
         <!-- 优先选择file_url选项 -->
         <% unless @course.attachment && @course.attachment.file_url.present? %>
