--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -542,10 +542,25 @@ body.courses__show, body.courses__after_class {
 			.left-content {
 				float: left;
 				width: 500px;
+				position: relative;
 				.course-image {
 					width: 500px;
 					height: 350px;
 					overflow: hidden;
+				}
+				.top-shadow {
+					color: #fff;
+					height: 30px;
+					line-height: 30px;
+					width: 100%;
+					position: absolute;
+					top: 0;
+					left: 0;
+					background: #000;
+					z-index: 233;
+					text-align: right;
+					padding-right: 16px;
+					opacity: 0.5;
 				}
 				.course-and-score {
 					overflow: hidden;
