--- a/app/views/discusses/index.html.erb
+++ b/app/views/discusses/index.html.erb
@@ -31,7 +31,8 @@
   </ul>
 
   <div id="topicList" class="container discuss-list">
-    <%= render "topic", locals: {topics: @topics} %>
+    <%#= render "topic", locals: {topics: @topics} %>
+    <%= render "wait"%>
   </div>
 </div>
 
