--- a/app/assets/stylesheets/application/discusses.scss
+++ b/app/assets/stylesheets/application/discusses.scss
@@ -123,3 +123,30 @@
 
 
 }
+.on-content {
+  position: relative;
+}
+.on-button {
+  width: 230px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  display: block;
+  position: absolute;
+  right: 100px;
+  bottom: 40px;
+  color: #fff!important;
+  &.left {
+    left: 100px;
+    bottom: 60px;
+  }
+  &.new {
+    background: #fbb241;
+  }
+  &.hot {
+    background: #fbb241;
+  }
+  &.wait {
+    background: #253963;
+  }
+}
