--- a/app/views/discusses/index.html.erb
+++ b/app/views/discusses/index.html.erb
@@ -22,41 +22,16 @@
   </div> -->
 
   <ul class="nav nav-pills discuss-menu">
-    <li class="<%= 'active' if params[:type].blank? || params[:type] == 'new' %>"><%= link_to("专业人才培养校企论坛", discusses_path) %></li>
-    <li class="<%= 'active' if params[:type] == 'hot' %>"><%= link_to("课程学习讨论", discusses_path(type: "hot")) %></li>
-    <li class="<%= 'active' if params[:type] == 'wait' %>"><%= link_to("创新创意论坛", discusses_path(type: "wait")) %></li>
-    <li class="navbar-right create-discuss">
-      <a id="newCreateBtn" href="javascript:void(0);"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建话题</a>
-    </li>
+    <%= render "tabs" %>
   </ul>
 
   <div id="topicList" class="container discuss-list">
     <%#= render "topic", locals: {topics: @topics} %>
-    <%= render "wait"%>
+    <%#= render "wait"%>
+    <% @specialties.each do | specialty| %>
+      <div class="col-sm-3">
+        <%= link_to specialty.name, sorts_discusses_path, class: "btn btn-default btn-block btn-height" %>
+      </div>
+    <% end %>
   </div>
 </div>
-
-
-<div id="createDiscuss" class="modal fade">
-  <%= render "new_modal" %>
-</div>
-
-<div id="relyCommentForm" style="display: none;">
-  <%= form_tag reply_topic_discusses_path, method: :post, remote: true, class: "reply-comment-form" do %>
-    <br><br>
-    <%= text_area_tag "comment", "", rows: 3, 
-      cols: 100, placeholder: "扯淡、吐槽、表扬、鼓励......想说啥就说啥！" %>
-    <%= hidden_field_tag "comment_id" %>
-    <%= hidden_field_tag "type", params[:type] %>
-    <%= hidden_field_tag "page", params[:page] %>
-    <%= submit_tag "发布", class: "btn btn-success pull-right", onclick: "if($(this).siblings('#comment').first().val() == ''){alert('请填写内容在发布');return false;};" %>
-  <% end %>
-</div>
-
-<script type="text/javascript">
-  $(function(){
-    $("#newCreateBtn").click(function(){
-      $("#createDiscuss").modal();
-    });
-  });
-</script>
