modify password for teachers in admin

--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -104,6 +104,13 @@
       <%= f.text_field :tec_expertise , class: 'form-control' %>
     </div>
   </div>
+  <hr>
+  <div class="form-group">
+    <%= f.label :password, '修改密码', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.password_field :password, label: "修改密码", class: 'form-control' %>
+    </div>
+  </div>
 
   <hr></hr>
   <div class="form-group">
