wechat student login

--- a/app/assets/stylesheets/wechat/users.scss
+++ b/app/assets/stylesheets/wechat/users.scss
@@ -26,4 +26,10 @@
   .button.button-submit {
     background: #1a5aa0;
   }
+
+  // 错误提示
+  .text-danger {
+    margin-left: 0.9rem;
+    color: red;
+  }
 }
