--- a/app/assets/stylesheets/wechat/users.scss
+++ b/app/assets/stylesheets/wechat/users.scss
@@ -1,6 +1,6 @@
-// Place all the styles related to the wechat/users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "wechat_variables";
+
+// 登录页面
 .users__sessions__new {
   .page, .page-group {
     background: #e4e4e4;
@@ -33,3 +33,65 @@
     color: red;
   }
 }
+
+//个人资料页面
+.wechat__users__show {
+  // 头像及欢迎语
+  .content {
+    background: #fff;
+  }
+  .top {
+    height: 7rem;
+    background: $primaryBg;
+
+    .info {
+      height: 6rem;
+      margin-left: 1.8rem;
+      padding-top: 1rem;
+        
+      .font-info {
+        font-size: 0.6rem;
+        color: #fff;
+        padding-left: 0.7rem;
+        height: 5rem;
+
+        .welcome {
+          font-size: 0.8rem;
+          line-height: 1.2rem;
+        }
+      }
+
+      img {
+        max-height: 5rem;
+      }
+
+      .buttons {
+        padding-top: 1.1rem;
+        .button {
+          border-radius: 0;
+          height: 1.7rem;
+          font-size: 1rem;
+        }
+
+        .button.button-fill {
+          line-height: 1.7rem;
+        }
+
+        .button.button-default {
+          background: #fff;
+          color: #3599ec;
+          border: 2px solid #1986dc;
+        }
+        .button.button-danger {
+          background: #fe4064;
+          border: 2px solid #f80f0f;
+        }
+      }
+    }
+  }
+
+  .list-block {
+    margin: 0;
+  }
+}
+
