--- a/app/views/layouts/wechat.html.erb
+++ b/app/views/layouts/wechat.html.erb
@@ -8,7 +8,9 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
+  <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+  <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+      <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
   <%= stylesheet_link_tag    'wechat', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
@@ -18,6 +20,7 @@
           <%= yield %>
         </div>
       </div>
+      
       <%= javascript_include_tag 'wechat' %>
       <%= yield :script %>
   </body>
